--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,15 @@ button:focus-visible {
   text-align: center;
 } */
 
+.page-title {
+  font-size: 24px;
+  font-weight: semi-bold; 
+  color: #333; 
+  text-align: start;
+  margin-top: 20px; 
+  margin-bottom: 20px; 
+}
+
 button {
   border-radius: 4px;
   margin-right: 0.9rem;
